--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
 <body>
     <h1>Welcome to Guppies!</h1>
     <p id="money"></p>
-    <label for="bet">Enter your bet:</label>
-    <input type="number" id="bet" min="1" max="100">
-    <br>
-    <label for="guess">Will the second number be higher or lower? (H/L):</label>
-    <input type="text" id="guess" maxlength="1">
-    <br>
-    <button id="play">Play</button>
+    <p id="round">Round: 1</p>
+    <p id="firstNumber"></p>
+    <div id="betSection">
+        <label for="bet">Enter your bet:</label>
+        <input type="number" id="bet" min="1" max="100">
+        <br>
+        <button id="betButton">Submit Bet</button>
+    </div>
+    <div id="guessSection" style="display: none;">
+        <label for="guess">Will the second number be higher or lower? (H/L):</label>
+        <input type="text" id="guess" maxlength="1">
+        <br>
+        <button id="guessButton">Submit Guess</button>
+    </div>
     <p id="result"></p>
     <script src="guppies.js"></script>
 </body>
